src/objects/Trail__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <label>Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Inspection_Date__c</fullName>
        <label>Last Inspection Date</label>
        <type>Date</type>
    </fields>
    <label>Trail</label>
    <nameField>
        <label>Nombre de Trail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>